--- a/RoomMe/app/src/main/res/layout/cards_layout.xml
+++ b/RoomMe/app/src/main/res/layout/cards_layout.xml
@@ -31,26 +31,26 @@
                 android:id="@+id/imageView" />
 
             <TextView
-                android:id="@+id/apartmentName"
+                android:id="@+id/costOfRent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="14dp"
                 android:text="$400/Month"
                 android:textSize="15sp"
-                android:layout_alignBaseline="@+id/textView5"
-                android:layout_alignBottom="@+id/textView5"
+                android:layout_alignBaseline="@+id/apartmentName"
+                android:layout_alignBottom="@+id/apartmentName"
                 android:layout_alignParentEnd="true" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/apartmentName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="13dp"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="13dp"
                 android:text="Centenial 2"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true" />
 
             <TextView
                 android:id="@+id/textView2"
@@ -58,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/textView6"
                 android:layout_alignBottom="@+id/textView6"
-                android:layout_alignEnd="@+id/apartmentName"
+                android:layout_alignEnd="@+id/costOfRent"
                 android:text="Provo UT"
                 android:textSize="12sp" />
 
@@ -66,8 +66,8 @@
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/textView5"
-                android:layout_below="@+id/textView5"
+                android:layout_alignStart="@+id/apartmentName"
+                android:layout_below="@+id/apartmentName"
                 android:layout_marginTop="9dp"
                 android:text="Men's Single"
                 android:textSize="12sp" />
