--- a/RoomMe/app/src/main/res/layout/activity_buy.xml
+++ b/RoomMe/app/src/main/res/layout/activity_buy.xml
@@ -1,10 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/buy_fragment_container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.brandonderbidge.myapplication.buy.BuyActivity">
 
-</FrameLayout>
+
+<!-- Here are the existing layout elements, now wrapped in
+     a CoordinatorLayout -->
+
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
+    android:weightSum="1"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
+    <LinearLayout
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+    <!-- A RecyclerView with some commonly used attributes -->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:itemBackground="@android:color/white"
+        app:menu="@menu/navigation"
+        app:itemTextColor="@color/cardview_dark_background"/>
+
+
+</LinearLayout>
