--- a/RoomMe/app/src/main/res/layout/fragment_login.xml
+++ b/RoomMe/app/src/main/res/layout/fragment_login.xml
@@ -45,7 +45,7 @@
 
                 <EditText
                     style="@style/AppTheme.EditText"
-                    android:id="@+id/user_name"
+                    android:id="@+id/username"
                     android:inputType="text"
                     android:hint="@string/login_username"/>
 
