--- a/RoomMe/app/src/main/res/layout/fragment_register.xml
+++ b/RoomMe/app/src/main/res/layout/fragment_register.xml
@@ -28,74 +28,96 @@
 
         </LinearLayout>
 
-        <GridLayout
-            android:id="@+id/login_grid"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/title"
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/first_name_label"
+            app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
+            app:layout_constraintTop_toBottomOf="@id/title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:layout_editor_absoluteX="0dp">
+            style="@style/AppTheme.EditTextLabel">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/first_name_label"
-                android:layout_row="1"
-                app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
-                style="@style/AppTheme.EditTextLabel">
+            <EditText
+                style="@style/AppTheme.EditText"
+                android:id="@+id/first_name"
+                android:inputType="text"
+                android:hint="@string/login_firstname"/>
 
-                <EditText
-                    style="@style/AppTheme.EditText"
-                    android:id="@+id/first_name"
-                    android:inputType="text"
-                    android:hint="@string/login_firstname"/>
+        </android.support.design.widget.TextInputLayout>
 
-            </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/last_name_label"
+            app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
+            app:layout_constraintTop_toBottomOf="@id/first_name_label"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/AppTheme.EditTextLabel">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/last_name_label"
-                android:layout_row="2"
-                app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
-                style="@style/AppTheme.EditTextLabel">
+            <EditText
+                style="@style/AppTheme.EditText"
+                android:id="@+id/last_name"
+                android:inputType="text"
+                android:hint="@string/login_lastname" />
 
-                <EditText
-                    style="@style/AppTheme.EditText"
-                    android:id="@+id/last_name"
-                    android:inputType="text"
-                    android:hint="@string/login_lastname" />
+        </android.support.design.widget.TextInputLayout>
 
-            </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/username_label"
+            app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
+            app:layout_constraintTop_toBottomOf="@id/last_name_label"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/AppTheme.EditTextLabel">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/username_label"
+            <EditText
+                style="@style/AppTheme.EditText"
+                android:id="@+id/username"
                 android:layout_row="3"
-                app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
-                style="@style/AppTheme.EditTextLabel">
+                android:inputType="text"
+                android:hint="@string/login_username"/>
 
-                <EditText
-                    style="@style/AppTheme.EditText"
-                    android:id="@+id/user_name"
-                    android:layout_row="3"
-                    android:inputType="text"
-                    android:hint="@string/login_username"/>
+        </android.support.design.widget.TextInputLayout>
 
-            </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/password_label"
+            app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
+            app:layout_constraintTop_toBottomOf="@id/username_label"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/AppTheme.EditTextLabel">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/password_label"
-                android:layout_row="4"
-                app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
-                style="@style/AppTheme.EditTextLabel">
+            <EditText
+                style="@style/AppTheme.EditText"
+                android:id="@+id/password"
+                android:inputType="textPassword"
+                android:hint="@string/login_password" />
 
-                <EditText
-                    style="@style/AppTheme.EditText"
-                    android:id="@+id/password"
-                    android:inputType="textPassword"
-                    android:hint="@string/login_password" />
+        </android.support.design.widget.TextInputLayout>
 
-            </android.support.design.widget.TextInputLayout>
+        <LinearLayout
+            android:id="@+id/select_sex_container"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/password_label"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="30dp"
+            android:orientation="horizontal">
 
-        </GridLayout>
+            <Button
+                android:id="@+id/male_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/login_male"
+                style="@style/toggleButtonLeft" />
+            <Button
+                android:id="@+id/female_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/login_female"
+                style="@style/toggleButtonRight" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/login_btn_layout"
@@ -103,7 +125,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center_horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/login_grid"
+            app:layout_constraintTop_toBottomOf="@+id/select_sex_container"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:layout_editor_absoluteX="0dp">
