--- a/RoomMe/app/src/main/res/layout/cards_layout.xml
+++ b/RoomMe/app/src/main/res/layout/cards_layout.xml
@@ -53,17 +53,17 @@
                 android:layout_alignParentStart="true" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/cityState"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/textView6"
-                android:layout_alignBottom="@+id/textView6"
-                android:layout_alignEnd="@+id/costOfRent"
                 android:text="Provo UT"
+                android:layout_alignBaseline="@+id/genderRoomType"
+                android:layout_alignBottom="@+id/genderRoomType"
+                android:layout_alignEnd="@+id/costOfRent"
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/genderRoomType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignStart="@+id/apartmentName"
