--- a/RoomMe/app/src/main/res/layout/activity_buy.xml
+++ b/RoomMe/app/src/main/res/layout/activity_buy.xml
@@ -11,7 +11,8 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     android:weightSum="1"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/background">
 
 
     <LinearLayout
