--- a/RoomMe/app/src/main/res/layout/activity_login.xml
+++ b/RoomMe/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:id="@+id/login_fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.brandonderbidge.myapplication.login.LoginActivity">
+    tools:context="com.example.brandonderbidge.myapplication.login.LoginActivity"
+    android:background="@color/background">
 
 </FrameLayout>
