--- a/RoomMe/app/src/main/res/layout/fragment_login.xml
+++ b/RoomMe/app/src/main/res/layout/fragment_login.xml
@@ -87,7 +87,7 @@
                 android:layout_marginTop="45dp"
                 android:layout_marginBottom="45dp"/>
 
-            <TextView
+            <!--TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -125,7 +125,7 @@
                     android:layout_weight="4"
                     android:background="@color/colorPrimaryDark" />
 
-            </LinearLayout>
+            </LinearLayout-->
 
             <Button
                 style="@style/AppTheme.SecondaryButton"
