--- a/RoomMe/app/src/main/res/values/styles.xml
+++ b/RoomMe/app/src/main/res/values/styles.xml
@@ -35,6 +35,7 @@
         <item name="android:layout_marginTop">10dp</item>
     </style>
     <style name="AppTheme.EditTextLabelColorTheme">
+        <item name="android:textSize">13sp</item>
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:theme">@style/SwitchTheme</item>
     </style>
@@ -45,6 +46,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:imeOptions">flagNoExtractUi</item>
         <item name="android:theme">@style/SwitchTheme</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:layout_margin">5dp</item>
     </style>
     <style name="AppTheme.Button">
         <item name="android:layout_height">wrap_content</item>
@@ -63,8 +66,8 @@
         <item name="android:textColor">@color/White</item>
     </style>
     <style name="AppTheme.SecondaryButton" parent="AppTheme.PrimaryButton">
-        <item name="android:layout_marginStart">45dp</item>
-        <item name="android:layout_marginEnd">45dp</item>
+        <item name="android:layout_marginStart">60dp</item>
+        <item name="android:layout_marginEnd">60dp</item>
         <item name="android:backgroundTint">@color/colorLoginBtn</item>
     </style>
     <style name="AppTheme.Text">
