--- a/RoomMe/app/src/main/res/layout/activity_contract.xml
+++ b/RoomMe/app/src/main/res/layout/activity_contract.xml
@@ -89,11 +89,9 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginBottom="153dp"
-                android:layout_marginStart="39dp"
-                android:text="TextView" />
+                android:text="Sell By:"
+                android:layout_below="@+id/sellerName"
+                android:layout_alignStart="@+id/sellerName" />
 
             <TextView
                 android:id="@+id/sellerName"
@@ -104,6 +102,22 @@
                 android:layout_marginStart="24dp"
                 android:layout_below="@+id/imageView"
                 android:layout_alignStart="@+id/genderRoomType" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/textView2"
+                android:layout_toEndOf="@+id/apartmentName"
+                android:text="12/23/17" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="270dp"
+                android:layout_height="80dp"
+                android:layout_alignStart="@+id/textView2"
+                android:layout_below="@+id/textView3"
+                android:text="TextView" />
 
         </RelativeLayout>
 
