--- a/RoomMe/app/src/main/res/layout/activity_contract.xml
+++ b/RoomMe/app/src/main/res/layout/activity_contract.xml
@@ -28,20 +28,19 @@
                 android:id="@+id/button"
                 android:layout_width="200dp"
                 android:layout_height="60dp"
-                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/notes"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="10dp"
                 android:background="#FF4081"
-                android:text="Button" />
+                android:text="Contact Seller" />
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
-                android:layout_height="185dp"
-
+                android:layout_height="165dp"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/cityState"
-                android:layout_marginTop="31dp" />
+                android:layout_marginTop="28dp"
+                android:src="@drawable/UT_Provo_TestRiviera_p0524952_6_1_PhotoGallery"/>
 
             <TextView
                 android:id="@+id/costOfRent"
@@ -52,7 +51,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="14dp"
                 android:text="$400/Month"
-                android:textSize="15sp" />
+                android:textColor="@color/black"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/apartmentName"
@@ -63,7 +63,9 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="13dp"
                 android:text="Centenial 2"
-                android:textSize="15sp" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/cityState"
@@ -73,7 +75,8 @@
                 android:layout_alignBottom="@+id/genderRoomType"
                 android:layout_alignEnd="@+id/costOfRent"
                 android:text="Provo UT"
-                android:textSize="12sp" />
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/genderRoomType"
@@ -83,41 +86,45 @@
                 android:layout_below="@+id/apartmentName"
                 android:layout_marginTop="9dp"
                 android:text="Men's Single"
-                android:textSize="12sp" />
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sell By:"
+                android:layout_alignStart="@+id/sellerName"
                 android:layout_below="@+id/sellerName"
-                android:layout_alignStart="@+id/sellerName" />
+                android:text="Sell By:"
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/sellerName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="22dp"
-                android:text="Brandon Derbidge"
-                android:layout_marginStart="24dp"
+                android:layout_alignStart="@+id/notes"
                 android:layout_below="@+id/imageView"
-                android:layout_alignStart="@+id/genderRoomType" />
+                android:layout_marginTop="10dp"
+                android:text="Brandon Derbidge"
+                android:textColor="@color/black" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/sellBy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/textView2"
-                android:layout_toEndOf="@+id/apartmentName"
-                android:text="12/23/17" />
+                android:layout_alignEnd="@+id/sellerName"
+                android:layout_below="@+id/sellerName"
+                android:text="12/23/17"
+                android:textColor="@color/black" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/notes"
                 android:layout_width="270dp"
                 android:layout_height="80dp"
-                android:layout_alignStart="@+id/textView2"
-                android:layout_below="@+id/textView3"
-                android:text="TextView" />
+                android:layout_below="@+id/textView2"
+                android:layout_centerHorizontal="true"
+                android:text="Notes"
+                android:textColor="@color/black" />
 
         </RelativeLayout>
 
