--- a/RoomMe/app/src/main/res/layout/fragment_register.xml
+++ b/RoomMe/app/src/main/res/layout/fragment_register.xml
@@ -73,7 +73,6 @@
             <EditText
                 style="@style/AppTheme.EditText"
                 android:id="@+id/username"
-                android:layout_row="3"
                 android:inputType="text"
                 android:hint="@string/login_username"/>
 
@@ -102,7 +101,7 @@
             app:layout_constraintTop_toBottomOf="@id/password_label"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="35dp"
             android:orientation="horizontal">
 
             <Button
@@ -111,6 +110,9 @@
                 android:layout_height="wrap_content"
                 android:text="@string/login_male"
                 style="@style/toggleButtonLeft" />
+
+            <View style="@style/toggleButton.separator" />
+
             <Button
                 android:id="@+id/female_btn"
                 android:layout_width="wrap_content"
