--- a/RoomMe/app/src/main/res/values/styles.xml
+++ b/RoomMe/app/src/main/res/values/styles.xml
@@ -47,7 +47,7 @@
         <item name="android:imeOptions">flagNoExtractUi</item>
         <item name="android:theme">@style/SwitchTheme</item>
         <item name="android:textSize">20sp</item>
-        <item name="android:layout_margin">5dp</item>
+        <!--item name="android:layout_margin">5dp</item-->
     </style>
     <style name="AppTheme.Button">
         <item name="android:layout_height">wrap_content</item>
@@ -62,6 +62,7 @@
         <item name="android:layout_marginEnd">30dp</item>
         <item name="android:layout_marginTop">15dp</item>
         <item name="android:layout_marginBottom">15dp</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:backgroundTint">@color/colorPrimary</item>
         <item name="android:textColor">@color/White</item>
     </style>
@@ -81,15 +82,22 @@
         <item name="android:gravity">center</item>
         <item name="android:layout_marginTop">15dp</item>
         <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:minHeight">0dp</item>
         <item name="android:padding">10dp</item>
     </style>
     <style name="toggleButtonLeft" parent="toggleButton">
-        <item name="android:background">@drawable/toggle_button_left_clicked</item>
-        <item name="android:textColor">@color/White</item>
+        <item name="android:background">@drawable/toggle_button_left</item>
     </style>
     <style name="toggleButtonRight" parent="toggleButton">
         <item name="android:background">@drawable/toggle_button_right</item>
+    </style>
+    <style name="toggleButton.separator">
+        <item name="android:layout_width">1dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:background">@color/buttonBorder</item>
     </style>
     <style name="SwitchTheme" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:colorAccent">@color/colorPrimary</item>
