major changes to use Fragments for the main page. BuyActivity removed, Buy Fragment took place. Main Activity contains MainFragment, which contains the a fragmentPlaceholder in order to use the BottomNavigateView effectively. Fixes to filter settings. BottomNavigationView now in one place for all pages (MainFragment) Packages made to group files together in a readable manner other changes.

--- a/RoomMe/app/src/main/res/drawable/toggle_button_left_clicked.xml
+++ b/RoomMe/app/src/main/res/drawable/toggle_button_left_clicked.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="true">
+    <item android:state_pressed="true" android:color="@color/White">
         <shape>
             <gradient android:angle="270"
                 android:endColor="@color/colorPrimary" android:startColor="@color/colorPrimary" />
             <corners android:topLeftRadius="2dp" android:bottomLeftRadius="2dp" />
         </shape>
     </item>
-    <item>
+    <item android:color="@color/White">
         <shape>
             <gradient android:angle="270"
                 android:endColor="@color/colorPrimaryLight" android:startColor="@color/colorPrimaryLight" />
