--- a/RoomMe/app/src/main/res/layout/filter_buy.xml
+++ b/RoomMe/app/src/main/res/layout/filter_buy.xml
@@ -15,7 +15,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:background="@null"
-        android:src="@drawable/ic_close" />
+        android:src="@drawable/ic_close"
+        tools:layout_editor_absoluteX="0dp" />
 
     <TextView
         android:id="@+id/filter_title"
@@ -24,10 +25,10 @@
         app:layout_constraintTop_toBottomOf="@+id/close_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="30dp"
         android:textSize="45sp"
         android:gravity="center_horizontal"
-        android:text="@string/filter" />
+        android:text="@string/filter"
+        tools:layout_editor_absoluteX="0dp" />
 
     <LinearLayout
         android:id="@+id/price_range"
@@ -35,7 +36,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/filter_title"
         app:layout_constraintStart_toStartOf="parent"
-        android:orientation="horizontal" android:gravity="center">
+        android:orientation="horizontal"
+        android:gravity="center"
+        tools:layout_editor_absoluteX="0dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -78,11 +81,11 @@
         android:id="@+id/select_marital_status_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/price_range"
+        app:layout_constraintTop_toBottomOf="@+id/price_range"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="30dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center" >
 
         <Button
             android:id="@+id/single"
@@ -106,11 +109,11 @@
         android:id="@+id/select_sex_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/select_marital_status_container"
+        app:layout_constraintTop_toBottomOf="@+id/select_marital_status_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="30dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center" >
 
         <Button
             android:id="@+id/male_btn"
@@ -127,6 +130,38 @@
             android:layout_height="wrap_content"
             android:text="@string/login_female"
             style="@style/toggleButtonRight" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="15dp">
+
+        <Button
+            android:id="@+id/cancel_filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:textColor="@drawable/colorless_button_text"
+            android:textSize="20sp"
+            android:layout_margin="15dp"
+            android:text="@string/cancel"/>
+
+        <Button
+            android:id="@+id/apply_filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:textColor="@drawable/colorless_button_text"
+            android:textSize="20sp"
+            android:layout_margin="15dp"
+            android:text="@string/apply"/>
 
     </LinearLayout>
 
