--- a/RoomMe/app/src/main/res/values/styles.xml
+++ b/RoomMe/app/src/main/res/values/styles.xml
@@ -113,5 +113,5 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:colorBackground">@android:color/background_light</item>
         <item name="colorButtonNormal">@color/buttonNormal</item>
-    </style>
+    </style>s
 </resources>
