--- a/RoomMe/app/src/main/res/layout/fragment_buy.xml
+++ b/RoomMe/app/src/main/res/layout/fragment_buy.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/fragment_buy">
+    android:layout_height="match_parent"
+    android:id="@+id/fragment_buy"
+    android:layout_marginTop="28dp"
+    android:layout_marginBottom="29dp">
 
     <!-- A RecyclerView with some commonly used attributes -->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/buy_recycler_view"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true" />
 
-</LinearLayout>
+</RelativeLayout>
