--- a/RoomMe/app/src/main/res/menu/buy_menu.xml
+++ b/RoomMe/app/src/main/res/menu/buy_menu.xml
@@ -3,8 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".main.MainActivity">
+    <!--item android:id="@+id/search"
+        android:title="@string/search_title"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="collapseActionView|ifRoom"
+        android:actionViewClass="android.widget.SearchView" /-->
+
     <item android:id="@+id/filter_item"
-        android:title="sort/filter"
+        android:title="@string/filter_action"
+        android:icon="@drawable/ic_filter"
         app:showAsAction="always"/>
 </menu>
 
