--- a/RoomMe/app/src/main/res/layout/activity_contract.xml
+++ b/RoomMe/app/src/main/res/layout/activity_contract.xml
@@ -24,14 +24,23 @@
             android:layout_height="498dp"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/button"
-                android:layout_width="200dp"
-                android:layout_height="60dp"
-                android:layout_below="@+id/notes"
+            <ImageView
+                android:id="@+id/caller"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/email"
+                android:layout_marginRight="32dp"
+                android:layout_toStartOf="@id/email"
+                card_view:srcCompat="@drawable/ic_action_phone" />
+
+            <ImageView
+                android:id="@+id/email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imageView"
                 android:layout_centerHorizontal="true"
-                android:background="#FF4081"
-                android:text="Contact Seller" />
+                android:layout_marginTop="14dp"
+                card_view:srcCompat="@drawable/ic_action_name" />
 
             <ImageView
                 android:id="@+id/imageView"
@@ -39,8 +48,17 @@
                 android:layout_height="165dp"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/cityState"
-                android:layout_marginTop="28dp"
-                android:src="@drawable/theriv"/>
+                android:layout_marginTop="27dp"
+                android:src="@drawable/theriv" />
+
+            <ImageView
+                android:id="@+id/imageView11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/email"
+                android:layout_marginStart="32dp"
+                android:layout_toEndOf="@+id/email"
+                card_view:srcCompat="@drawable/ic_action_favorite" />
 
             <TextView
                 android:id="@+id/costOfRent"
@@ -95,32 +113,32 @@
                 android:layout_height="wrap_content"
                 android:layout_alignStart="@+id/sellerName"
                 android:layout_below="@+id/sellerName"
-                android:text="Sell By:"
+                android:text="Contract Available:"
                 android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/sellerName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
-                android:text="Brandon Derbidge"
-                android:textColor="@color/black"
+                android:layout_alignStart="@+id/notes"
                 android:layout_below="@+id/imageView"
-                android:layout_alignStart="@+id/notes" />
+                android:layout_marginTop="50dp"
+                android:text="Brandon Derbidge"
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/sellBy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/sellerName"
-                android:layout_below="@+id/sellerName"
+                android:layout_above="@+id/notes"
+                android:layout_alignStart="@+id/email"
                 android:text="12/23/17"
                 android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/notes"
                 android:layout_width="270dp"
-                android:layout_height="80dp"
+                android:layout_height="100dp"
                 android:layout_below="@+id/textView2"
                 android:layout_centerHorizontal="true"
                 android:text="Notes"
