--- a/RoomMe/app/src/main/res/layout/activity_register.xml
+++ b/RoomMe/app/src/main/res/layout/activity_register.xml
@@ -74,7 +74,7 @@
                 style="@style/AppTheme.EditText"
                 android:id="@+id/username"
                 android:inputType="text"
-                android:hint="@string/login_username"/>
+                android:hint="@string/login_email"/>
 
         </android.support.design.widget.TextInputLayout>
 
